On mobile fix the color scrolling:

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -294,12 +294,14 @@ footer .name {
   right: 0;
   display: flex;
   flex-wrap: nowrap;
-  padding-left: 32px;
+  padding-left: 16px;
+  padding-right: 16px;
+  box-sizing: border-box;
   overflow-x: auto;
   justify-content: start;
   align-items: center;
   gap: 2em;
-  padding-bottom: 32px;
+  padding-bottom: 16px;
 }
 .game-bar .color {
   box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
